[tool.poetry]
name = "seebuoy"
version = "0.1.3"
description = "Remote data access for oceanographic data."
authors = ["nickc1 <nickcortale@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.2"
requests = "^2.24.0"
beautifulsoup4 = "^4.9.3"
lxml = "^4.9.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.0"
black = "^20.8b1"
flake8 = "^3.8.3"
mkdocs = "^1.1.2"
mkdocs-material = "^5.5.14"
ipython = "^7.18.1"
ipykernel = "^5.3.4"
seaborn = "^0.11.0"
tabulate = "^0.8.7"
mkdocstrings = "^0.13.6"
jupyterlab = "^3.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
