[tool.poetry]
name = "seebuoy"
version = "0.2.0"
description = "Remote data access for oceanographic data."
authors = ["nickc1 <nickcortale@gmail.com>"]
readme = "README.md"
packages = [{include = "seebuoy"}]

[tool.poetry.dependencies]
python = "^3.9.11"
pandas = "^1.1.2"
requests = "^2.24.0"
beautifulsoup4 = "^4.9.3"
lxml = "^4.9.1"
scikit-learn = "^1.1.3"
mkdocstrings = {extras = ["python"], version = "^0.19.1"}

[tool.poetry.group.dev.dependencies]
mkdocs-material = "^8.5.11"
pytest = "^6.1.0"
black = "^22.10.0"
flake8 = "^3.8.3"
ipython = "^7.18.1"
ipykernel = "^5.3.4"
seaborn = "^0.11.0"
tabulate = "^0.8.7"
jupyterlab = "^3.5.0"
mkdocstrings = "^0.19.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



